--- a/visu.ipynb
+++ b/visu.ipynb
@@ -1,86 +1,131 @@
 {
-  "metadata": {
-    "language_info": {
-      "codemirror_mode": {
-        "name": "javascript"
-      },
-      "file_extension": ".js",
-      "mimetype": "text/javascript",
-      "name": "javascript",
-      "nbconvert_exporter": "javascript",
-      "pygments_lexer": "javascript",
-      "version": "es2017"
-    },
-    "kernelspec": {
-      "name": "javascript",
-      "display_name": "JavaScript",
-      "language": "javascript"
-    },
-    "toc-showcode": true
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a JupyterLite notebook for visualizing a RAMSES galaxy simulation."
+   ]
   },
-  "nbformat_minor": 4,
-  "nbformat": 4,
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "source": "# JavaScript in `JupyterLite`\n\n![](https://jupyterlite.readthedocs.io/en/latest/_static/kernelspecs/javascript.svg)",
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": "## Standard streams",
-      "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "source": "console.log('hello world')",
-      "metadata": {
-        "trusted": true
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": "console.error('error')",
-      "metadata": {
-        "trusted": true
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": "## JavaScript specific constructs",
-      "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "source": "const delay = 2000;\n\nsetTimeout(() => {\n    console.log('done');\n}, delay);",
-      "metadata": {
-        "trusted": true
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": "var str = \"hello world\"\nstr.split('').forEach(c => {\n    console.log(c)\n})",
-      "metadata": {
-        "trusted": true
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": "## Markdown cells",
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": "Lorenz system of differential equations\n\n$$\n\\begin{aligned}\n\\dot{x} & = \\sigma(y-x) \\\\\n\\dot{y} & = \\rho x - y - xz \\\\\n\\dot{z} & = -\\beta z + xy\n\\end{aligned}\n$$\n",
-      "metadata": {}
-    }
-  ]
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we import some useful packages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import ramses.miniramses as ram"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we load some data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!curl https://tigress-web.princeton.edu/~rt3504/DAT/ics_zoom/grafic.tar --output grafic.tar\n",
+    "!tar xvf grafic.tar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "console.error('error')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## JavaScript specific constructs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const delay = 2000;\n",
+    "\n",
+    "setTimeout(() => {\n",
+    "    console.log('done');\n",
+    "}, delay);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var str = \"hello world\"\n",
+    "str.split('').forEach(c => {\n",
+    "    console.log(c)\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Markdown cells"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lorenz system of differential equations\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\dot{x} & = \\sigma(y-x) \\\\\n",
+    "\\dot{y} & = \\rho x - y - xz \\\\\n",
+    "\\dot{z} & = -\\beta z + xy\n",
+    "\\end{aligned}\n",
+    "$$\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
+  },
+  "toc-showcode": true
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
