--- a/visu.ipynb
+++ b/visu.ipynb
@@ -11,13 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we import some useful packages."
+    "First, we import some useful packages."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -29,17 +31,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we load some data:"
+    "Then, we load some data:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "!curl https://tigress-web.princeton.edu/~rt3504/DAT/ics_zoom/grafic.tar --output grafic.tar\n",
-    "!tar xvf grafic.tar"
+    "!curl https://tigress-web.princeton.edu/~rt3504/DAT/carlos/output_00011.tar --output output_00011.tar\n",
+    "!tar xvf output_00011.tar"
    ]
   },
   {
@@ -49,60 +53,6 @@
    "outputs": [],
    "source": [
     "console.error('error')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## JavaScript specific constructs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "const delay = 2000;\n",
-    "\n",
-    "setTimeout(() => {\n",
-    "    console.log('done');\n",
-    "}, delay);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "var str = \"hello world\"\n",
-    "str.split('').forEach(c => {\n",
-    "    console.log(c)\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Markdown cells"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lorenz system of differential equations\n",
-    "\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "\\dot{x} & = \\sigma(y-x) \\\\\n",
-    "\\dot{y} & = \\rho x - y - xz \\\\\n",
-    "\\dot{z} & = -\\beta z + xy\n",
-    "\\end{aligned}\n",
-    "$$\n"
    ]
   }
  ],
