--- a/content/visu.ipynb
+++ b/content/visu.ipynb
@@ -16,6 +16,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyodide_kernel\n",
+    "pyodide_kernel.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "tags": []
